--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -44,6 +44,87 @@
         </div>
         <a href="#about" class="scroll-down"> Scroll Down <i class="fas fa-arrow-down"> </i></a>
     </section>
+    <section class="about section" id="about">
+        <div class="container flex-center">
+            <h1 class="section-title-01">About me </h1>
+            <h2 class="section-title-02">About me </h1>
+                <div class="content flex-center">
+                    <div class="about-img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="about-info">
+                        <div class="description">
+                            <h3>I'm Aseel</h3>
+                            <h4>A pationate <span>software engineer</span> based in <span>Palestine</span> </h4>
+                            <p>
+                                bejbfjefjkebkjefjkejkjjnkndncdncdkndkdkndknckdnkcncknkcd
+                                jdbcnjcnjjnnsncksncksndkwnkwnwkdnwkndwkdnkwndknwknkwdkwndkwnkw
+                                kbwkbdwkdnwkndkwnldnlwdnlnwlnlwld.
+                            </p>
+                        </div>
+                        <ul class="professional-list">
+                            <li class="list-item">
+                                <h3>5+</h3>
+                                <span>Years of <br>experience</span>
+                            </li>
+                            <li class="list-item">
+                                <h3>5+</h3>
+                                <span>Years of <br>experience</span>
+                            </li>
+                            <li class="list-item">
+                                <h3>5+</h3>
+                                <span>Years of <br>experience</span>
+                            </li>
+                        </ul>
+                        <a href="" class="btn">Download CV <i class="fas fa-download"></i></a>
+                    </div>
+           
+                </div>
+
+        </div>
+    </section>
+
+    <section class="skills section" id="skills">
+        <div class="container flex-center"></div>
+        <h1 class="section-title-01">Skills</h1>
+        <h2 class="section-title-02">Skills</h2>
+            <div class="content">
+                <div class="skills-description">
+                    <h3>Education & Skills</h3>
+                    <p>bdujebdbeudbdejdnejdejdnjenjndjednjene
+                        ejbdjebjednjenjenjenjenjnlwndlwnlknle
+                        dj dlnml,lw,lwmdkwmdlwmdlwmdwlmdlwmlwdmwl
+                    </p>
+                </div>
+                <div class="skills-info eduacetion-all">
+                    <div class="education">
+                        <h4><label>Education</label></h4>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year"></span>
+                                <p><span>bdjwjdbw</span>bjebfeknerdekndkenkenkenkwnkendenle</p>
+                            </li>
+                            <li class="item">
+                                <span class="year"></span>
+                                <p><span>bdjwjdbw</span>bjebfeknerdekndkenkenkenkwnkendenle</p>
+                            </li>
+                            <li class="item">
+                                <span class="year"></span>
+                                <p><span>bdjwjdbw</span>bjebfeknerdekndkenkenkenkwnkendenle</p>
+                            </li>
+                            <li class="item">
+                                <span class="year"></span>
+                                <p><span>bdjwjdbw</span>bjebfeknerdekndkenkenkenkwnkendenle</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+    </section>
 </body>
+
+<script src="main.js"></script>
 
 </html>
